# CH_AI_N

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
Archive/: ARCHITECTURE.md  DEPLOYMENT.md
backend/: Dockerfile  alembic.ini  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/agents/: nodes.py  research_agent.py  tools.py
backend/app/api/: admin.py  agent.py  health.py  ingest.py
backend/app/auth/: deps.py  models.py  router.py  security.py  service.py
backend/app/core/: checkpointer.py  config.py  db.py  graph_state.py  llm.py  logging.py
backend/app/memory/: episodic.py  tool_state.py
backend/app/middleware/: budget.py  rate_limit.py  sanitize.py
backend/app/rag/: pipeline.py
backend/app/workers/: celery_app.py  tasks.py
docker/postgres/: init.sql
frontend/: .env.local.example  next.config.ts  package.json
frontend/src/app/: layout.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: Chat.tsx
litellm/: config.yaml
